--- a/lab01_2a/app/src/main/res/values/strings.xml
+++ b/lab01_2a/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="more">More&#8230;</string>
     <string name="type_here">Type here:</string>
     <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 </resources>
